修改依赖关系

--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
 
 	<developers>
 		<developer>
-			<name>ted</name>
+			<name>Ted Zhang</name>
 			<email>wqwq321@qq.com</email>
 			<url>https://github.com/TedZhDZ/wxpay-sdk.git</url>
 		</developer>
